--- a/calculator/style.css
+++ b/calculator/style.css
@@ -1,16 +1,22 @@
 
-body {
-  background-color: #101a1c;
+* {
   font-family: Arial;
   color: white;
+}
+
+body {
+  background-color: #101a1c;
   display: flex;
   justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
 }
 
 #app {
   width: 350px;
   height: 550px;
-  margin-top: 10%;
 }
 
 .screen {
@@ -41,18 +47,21 @@ body {
   width: 350px;
   height: 75%;
 
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .key{
   height: auto;
-  flex: 1 1 25%;
 
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: bold;
+}
+
+.buttons :nth-child(17) {
+  grid-column: 1 / 3;
 }
 
 .key:hover {
